Fix badge placement on mobile design

--- a/app/javascript/styles/badges.scss
+++ b/app/javascript/styles/badges.scss
@@ -56,6 +56,12 @@
   background-size: 16px
 }
 
+.ui__header .badge-level1,
+.ui__header .badge-level2,
+.ui__header .badge-level3 {
+  left: 22px;
+}
+
 .account__header .badge-level1,
 .account__header .badge-level2,
 .account__header .badge-level3 {
